--- a/rsyslog/files/rsyslog.conf
+++ b/rsyslog/files/rsyslog.conf
@@ -34,7 +34,7 @@ $KLogPermitNonKernelFacility on
 # Use traditional timestamp format.
 # To enable high precision timestamps, comment out the following line.
 #
-$ActionFileDefaultTemplate {% if client.format is defined %}{{ client.format.name }},{{ client.format.value }}
+$ActionFileDefaultTemplate {% if client.format is defined %}{{ client.format.name }},{{ client.format.template }}
 {% else %}
 ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 {% endif %}
