fix import name

--- a/rsyslog/files/rsyslog.conf
+++ b/rsyslog/files/rsyslog.conf
@@ -1,4 +1,4 @@
-{%- from "rsyslog/map.jinja" import server with context -%}
+{%- from "rsyslog/map.jinja" import client with context -%}
 #  /etc/rsyslog.conf    Configuration file for rsyslog.
 #
 #                       For more information see
