--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -1,6 +1,6 @@
 {%- from "rsyslog/map.jinja" import client,server,common with context -%}
 
-{% if common.preserve_fqdn is defined and preserve_fqdn == true %}
+{% if common.preserve_fqdn is defined and common.preserve_fqdn == true %}
 $PreserveFQDN
 {% endif %}
 
