--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -28,7 +28,7 @@ $SystemLogRateLimitInterval {{ common.system_log_rate_limit_interval }}
 $SystemLogRateLimitBurst {{ common.system_log_rateLimit_burst }}
 {% endif %}
 
-{% for modname in common.module %}
+{% for modname in common.modules %}
 $ModLoad {{ modname }}
 {% endfor %}
 
