--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -1,4 +1,4 @@
-{%- from "rsyslog/map.jinja" import client,server,common with context -%}
+{%- from "rsyslog/map.jinja" import common with context -%}
 
 {% if common.preserve_fqdn is defined and common.preserve_fqdn == true %}
 $PreserveFQDN
@@ -38,6 +38,14 @@ $PrivDropToGroup {{ common.run_group }}
 $WorkDirectory {{ common.spool_dir }}
 
 $IncludeConfig {{ common.rsyslog_d }}/*.conf
+
+{% if common.format is defined %}{% if common.format is defined %}
+$template {{ common.format.name }},{{ common.format.template }}
+$ActionFileDefaultTemplate {{ common.format.name }}
+{% else %}
+$template RSYSLOG_TraditionalFileFormat
+$ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
+{% endif %}
 
 {%- for name,config in common.output.file.iteritems() %}
 {% if config.owner is defined %}
