--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -39,7 +39,7 @@ $WorkDirectory {{ common.spool_dir }}
 
 $IncludeConfig {{ common.rsyslog_d }}/*.conf
 
-{% if common.format is defined %}{% if common.format is defined %}
+{% if common.format is defined %}
 $template {{ common.format.name }},{{ common.format.template }}
 $ActionFileDefaultTemplate {{ common.format.name }}
 {% else %}
