--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -1,8 +1,9 @@
 {%- from "rsyslog/map.jinja" import common with context -%}
 
 {% if common.preserve_fqdn is defined and common.preserve_fqdn == true %}
-$PreserveFQDN
+$PreserveFQDN on
 {% endif %}
+$PreserveFQDN off
 
 {% if common.non_kernel_facility is defined and common.non_kernel_facility == true %}
 $KLogPermitNonKernelFacility on
@@ -49,16 +50,16 @@ $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 
 {%- for name,config in common.output.file.iteritems() %}
 {% if config.owner is defined %}
-$FileOwner: {{ config['owner'] }}
+$FileOwner {{ config['owner'] }}
 {% endif %}
 {% if config.group is defined %}
-$FileGroup: {{ config['group'] }}
+$FileGroup {{ config['group'] }}
 {% endif %}
 {% if config.createmode is defined %}
-$FileCreateMode: "{{ config['createmode'] }}"
+$FileCreateMode "{{ config['createmode'] }}"
 {% endif %}
 {% if config.umask is defined %}
-$Umask: "{{ config['umask'] }}"
+$Umask "{{ config['umask'] }}"
 {% endif %}
 {{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}
 {% endfor %}
