--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -1,8 +1,12 @@
 {%- from "rsyslog/map.jinja" import common with context -%}
 
+{% for modname in common.modules %}
+$ModLoad {{ modname }}
+{% endfor %}
+
 {% if common.preserve_fqdn == true %}
 $PreserveFQDN on
-{% endif %}
+{% else %}
 $PreserveFQDN off
 
 {% if common.non_kernel_facility is defined and common.non_kernel_facility == true %}
@@ -29,9 +33,6 @@ $SystemLogRateLimitInterval {{ common.system_log_rate_limit_interval }}
 $SystemLogRateLimitBurst {{ common.system_log_rateLimit_burst }}
 {% endif %}
 
-{% for modname in common.modules %}
-$ModLoad {{ modname }}
-{% endfor %}
 
 $DirCreateMode {{ common.perm_dir }}
 $PrivDropToUser {{ common.run_user }}
@@ -56,22 +57,22 @@ $FileOwner {{ config['owner'] }}
 $FileGroup {{ config['group'] }}
 {% endif %}
 {% if config.createmode is defined %}
-$FileCreateMode "{{ config['createmode'] }}"
+$FileCreateMode {{ config['createmode'] }}
 {% endif %}
 {% if config.umask is defined %}
-$Umask "{{ config['umask'] }}"
+$Umask {{ config['umask'] }}
 {% endif %}
 {{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}
 {% endfor %}
 
 {% if common.output.console is defined %}
-{% for name,config in common.output.console.iteritems() %}
+{% for name,config in common.output.console.iteritems() -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor %}
 {% endif %}
 
 {% if common.output.remote is defined %}
-{% for name,config in common.output.console.iteritems() %}
+{% for name,config in common.output.console.iteritems() -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor %}
 {% endif %}
