--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -1,55 +1,56 @@
-{%- from "rsyslog/map.jinja" import common with context -%}
+{%- from "rsyslog/map.jinja" import global with context -%}
 
-{% for modname in common.modules %}
+{% for modname in global.modules %}
 $ModLoad {{ modname }}
 {% endfor %}
 
-{% if common.preserve_fqdn == true %}
+{% if global.preserve_fqdn == true %}
 $PreserveFQDN on
 {% else %}
 $PreserveFQDN off
+{% endif %}
 
-{% if common.non_kernel_facility is defined and common.non_kernel_facility == true %}
+{% if global.non_kernel_facility is defined and global.non_kernel_facility == true %}
 $KLogPermitNonKernelFacility on
 {% endif %}
 
-{% if common.omit_local_logging is defined and common.omit_local_logging == true %}
+{% if global.omit_local_logging is defined and global.omit_local_logging == true %}
 $OmitLocalLogging on
 {% endif %}
 
-{% if common.msg_reduction == true %}
+{% if global.msg_reduction == true %}
 $RepeatedMsgReduction on
 {% endif %}
 
-{% if common.max_message_size is defined %}
-$MaxMessageSize {{ common.max_message_size }}
+{% if global.max_message_size is defined %}
+$MaxMessageSize {{ global.max_message_size }}
 {% endif %}
 
-{% if common.system_log_rate_limit_interval is defined %}
-$SystemLogRateLimitInterval {{ common.system_log_rate_limit_interval }}
+{% if global.system_log_rate_limit_interval is defined %}
+$SystemLogRateLimitInterval {{ global.system_log_rate_limit_interval }}
 {% endif %}
 
-{% if common.system_log_rateLimit_burst is defined %}
-$SystemLogRateLimitBurst {{ common.system_log_rateLimit_burst }}
+{% if global.system_log_rateLimit_burst is defined %}
+$SystemLogRateLimitBurst {{ global.system_log_rateLimit_burst }}
 {% endif %}
 
 
-$DirCreateMode {{ common.perm_dir }}
-$PrivDropToUser {{ common.run_user }}
-$PrivDropToGroup {{ common.run_group }}
-$WorkDirectory {{ common.spool_dir }}
+$DirCreateMode {{ global.perm_dir }}
+$PrivDropToUser {{ global.run_user }}
+$PrivDropToGroup {{ global.run_group }}
+$WorkDirectory {{ global.spool_dir }}
 
-$IncludeConfig {{ common.rsyslog_d }}/*.conf
+$IncludeConfig {{ global.rsyslog_d }}/*.conf
 
-{% if common.format is defined %}
-$template {{ common.format.name }},{{ common.format.template }}
-$ActionFileDefaultTemplate {{ common.format.name }}
+{% if global.format is defined %}
+$template {{ global.format.name }},{{ global.format.template }}
+$ActionFileDefaultTemplate {{ global.format.name }}
 {% else %}
 $template RSYSLOG_TraditionalFileFormat
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 {% endif %}
 
-{%- for name,config in common.output.file.iteritems() %}
+{%- for name,config in global.output.file.iteritems() %}
 {% if config.owner is defined %}
 $FileOwner {{ config['owner'] }}
 {% endif %}
@@ -65,14 +66,14 @@ $Umask {{ config['umask'] }}
 {{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}
 {% endfor %}
 
-{% if common.output.console is defined %}
-{% for name,config in common.output.console.iteritems() -%}
+{% if global.output.console is defined %}
+{% for name,config in global.output.console.iteritems() -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor %}
 {% endif %}
 
-{% if common.output.remote is defined %}
-{% for name,config in common.output.console.iteritems() -%}
+{% if global.output.remote is defined %}
+{% for name,config in global.output.console.iteritems() -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor %}
 {% endif %}
