formating jinja crap

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -1,6 +1,6 @@
 {%- from "rsyslog/map.jinja" import global with context -%}
 
-{% for modname in global.modules %}
+{% for modname in global.modules -%}
 $ModLoad {{ modname }}
 {% endfor %}
 {% if global.preserve_fqdn == true %}
