formating jinja crap

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -31,34 +31,34 @@ $PrivDropToUser {{ global.run_user }}
 $PrivDropToGroup {{ global.run_group }}
 $WorkDirectory {{ global.spool_dir }}
 $IncludeConfig {{ global.rsyslog_d }}/*.conf
-{% if global.format is defined %}
+{% if global.format is defined -%}
 $template {{ global.format.name }},{{ global.format.template }}
 $ActionFileDefaultTemplate {{ global.format.name }}
-{% else %}
+{% else -%}
 $template RSYSLOG_TraditionalFileFormat
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
-{% endif %}
-{%- for name,config in global.output.file.iteritems() %}
-{% if config.owner is defined %}
+{% endif -%}
+{% for name,config in global.output.file.iteritems() -%}
+{% if config.owner is defined -%}
 $FileOwner {{ config['owner'] }}
-{% endif %}
-{% if config.group is defined %}
+{% endif -%}
+{% if config.group is defined -%}
 $FileGroup {{ config['group'] }}
-{% endif %}
-{% if config.createmode is defined %}
+{% endif -%}
+{% if config.createmode is defined -%}
 $FileCreateMode {{ config['createmode'] }}
-{% endif %}
-{% if config.umask is defined %}
+{% endif -%}
+{% if config.umask is defined -%}
 $Umask {{ config['umask'] }}
-{% endif %}
+{% endif -%}
 {{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}
 {% endfor -%}
-{% if global.output.console is defined %}
+{% if global.output.console is defined -%}
 {% for name,config in global.output.console.iteritems() -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor -%}
-{% endif %}
-{% if global.output.remote is defined %}
+{% endif -%}
+{% if global.output.remote is defined -%}
 {% for name,config in global.output.remote.iteritems() -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor -%}
