formating jinja crap

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -53,16 +53,16 @@ $FileCreateMode {{ config['createmode'] }}
 $Umask {{ config['umask'] }}
 {% endif -%}
 {{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}
-{% endfor -%}
+{% endfor %}
 
 {% if global.output.console is defined -%}
 {% for name,config in global.output.console.iteritems() -%}
 {{ config['filter'] }}      {{ config['action'] }}
-{% endfor -%}
+{% endfor %}
 {% endif -%}
 
 {% if global.output.remote is defined -%}
 {% for name,config in global.output.remote.iteritems() -%}
 {{ config['filter'] }}      {{ config['action'] }}
-{% endfor -%}
+{% endfor %}
 {% endif %}
