--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: salt-formula-rsyslog
 Maintainer: Jan Kaufman <jan.kaufman@tcpcloud.eu>
 Section: admin
 Priority: optional
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), salt-master, python, python-yaml
 Standards-Version: 3.9.6
 Homepage: http://www.tcpcloud.eu
 Vcs-Browser: https://github.com/tcpcloud/salt-formula-rsyslog
