Correctly handle "enabled" for config elements

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -40,7 +40,7 @@ $template RSYSLOG_TraditionalFileFormat
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 {% endif -%}
 
-{% for name,config in global.output.file.iteritems() -%}
+{% for name,config in global.output.file.iteritems() if config.get('enabled', False) -%}
 {% if config.owner is defined -%}
 $FileOwner {{ config['owner'] }}
 {% endif -%}
@@ -57,13 +57,13 @@ $Umask {{ config['umask'] }}
 {% endfor %}
 
 {% if global.output.console is defined -%}
-{% for name,config in global.output.console.iteritems() -%}
+{% for name,config in global.output.console.iteritems() if config.get('enabled', False) -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor %}
 {% endif -%}
 
 {% if global.output.remote is defined -%}
-{% for name,config in global.output.remote.iteritems() -%}
+{% for name,config in global.output.remote.iteritems() if config.get('enabled', False) -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor %}
 {% endif %}
