--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -40,7 +40,7 @@ $template RSYSLOG_TraditionalFileFormat
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 {% endif -%}
 
-{% for name,config in global.output.file.iteritems() if config.get('enabled', False) -%}
+{% for name,config in global.output.file.iteritems() if config.get('enabled', False) %}
 {% if config.owner is defined -%}
 $FileOwner {{ config['owner'] }}
 {% endif -%}
@@ -54,16 +54,16 @@ $FileCreateMode {{ config['createmode'] }}
 $Umask {{ config['umask'] }}
 {% endif -%}
 {{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}
-{% endfor %}
+{% endfor -%}
 
-{% if global.output.console is defined -%}
+{% if global.output.console is defined %}
 {% for name,config in global.output.console.iteritems() if config.get('enabled', False) -%}
 {{ config['filter'] }}      {{ config['action'] }}
-{% endfor %}
+{% endfor -%}
 {% endif -%}
 
-{% if global.output.remote is defined -%}
+{% if global.output.remote is defined %}
 {% for name,config in global.output.remote.iteritems() if config.get('enabled', False) -%}
 {{ config['filter'] }}      {{ config['action'] }}
-{% endfor %}
-{% endif %}
+{% endfor -%}
+{% endif -%}
