Use $Template rather than $template in config file

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -33,7 +33,7 @@ $WorkDirectory {{ global.spool_dir }}
 $IncludeConfig {{ global.rsyslog_d }}/*.conf
 
 {% if global.format is defined -%}
-$template {{ global.format.name }},{{ global.format.template }}
+$Template {{ global.format.name }},{{ global.format.template }}
 $ActionFileDefaultTemplate {{ global.format.name }}
 {% else -%}
 $template RSYSLOG_TraditionalFileFormat
