Ensure that the default format is applied for all
Without this change, custom configurations in /etc/rsyslog.d/* don't
use the default Syslog format.

Change-Id: Id6dbd9d1025087999d998c94dda8d75f748f2173

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -30,7 +30,6 @@ $DirCreateMode {{ global.perm_dir }}
 $PrivDropToUser {{ global.run_user }}
 $PrivDropToGroup {{ global.run_group }}
 $WorkDirectory {{ global.spool_dir }}
-$IncludeConfig {{ global.rsyslog_d }}/*.conf
 
 {% if global.format is defined -%}
 $Template {{ global.format.name }}, "{{ global.format.template }}"
@@ -39,6 +38,9 @@ $ActionFileDefaultTemplate {{ global.format.name }}
 $template RSYSLOG_TraditionalFileFormat
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 {% endif -%}
+
+{# Additional configurations should be included after defining the global format otherwise they won't benefit from it #}
+$IncludeConfig {{ global.rsyslog_d }}/*.conf
 
 {% for name,config in global.output.file.iteritems() if config.get('enabled', False) %}
 {% if config.owner is defined -%}
