Add stop processing option
This allows to use dedicated log files for some services. This is
especially useful when journald is around and forward logs to syslog.

Change-Id: I1edb2300d9596350567ba766a1b87cf6cd88aedb

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -42,7 +42,21 @@ $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 {# Additional configurations should be included after defining the global format otherwise they won't benefit from it #}
 $IncludeConfig {{ global.rsyslog_d }}/*.conf
 
-{% for name,config in global.output.file.iteritems() if config.get('enabled', False) %}
+{%- set file_groups = {
+  'stop': {},
+  'other': {}
+} -%}
+
+{%- for name,config in global.output.file.iteritems() if config.get('enabled', False) %}
+{%- if config.get('stop_processing', False) -%}
+{%- do file_groups.stop.update({name: config}) -%}
+{%- else -%}
+{%- do file_groups.other.update({name: config}) -%}
+{%- endif -%}
+{%- endfor -%}
+
+{%- macro rsyslog_output_file(files) -%}
+{%- for name, config in files.items() %}
 {% if config.owner is defined -%}
 $FileOwner {{ config['owner'] }}
 {% endif -%}
@@ -56,7 +70,14 @@ $FileCreateMode {{ config['createmode'] }}
 $Umask {{ config['umask'] }}
 {% endif -%}
 {{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}
+{%- if config.get('stop_processing', False) %}
+&stop
+{%- endif %}
 {% endfor -%}
+{%- endmacro %}
+
+{{ rsyslog_output_file(file_groups.stop) }}
+{{ rsyslog_output_file(file_groups.other) }}
 
 {% if global.output.console is defined %}
 {% for name,config in global.output.console.iteritems() if config.get('enabled', False) -%}
