Add syslog template per output file
Change-Id: Iad68aacf156be66732a2777ace3cc3756d5e46ca

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -53,6 +53,9 @@ $IncludeConfig {{ global.rsyslog_d }}/*.conf
 {%- else -%}
 {%- do file_groups.other.update({name: config}) -%}
 {%- endif -%}
+{%- if config.template is defined %}
+$Template {{ name|replace('/', '_') }}, "{{ config.template }}"
+{%- endif -%}
 {%- endfor -%}
 
 {%- macro rsyslog_output_file(files) -%}
@@ -69,7 +72,7 @@ $FileCreateMode {{ config['createmode'] }}
 {% if config.umask is defined -%}
 $Umask {{ config['umask'] }}
 {% endif -%}
-{{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}
+{{ config['filter'] }}     {% if config.sync == true %}-{% endif %}{{ name }}{%if config.template is defined %};{{ name|replace('/', '_') }}{% endif %}
 {%- if config.get('stop_processing', False) %}
 &stop
 {%- endif %}
