--- a/rsyslog/files/10-remote.conf
+++ b/rsyslog/files/10-remote.conf
@@ -2,13 +2,10 @@
 
 ##### Modules Import #####
 
-{%- for module in server.get('modules', {}) %}
-module(load="{{ module.name }}"
-{%- if module.parameter is defined -%}
-{%- for name,value in module.parameter.iteritems() %} {{name}}="{{value}}"
-{%- endfor -%}
-{%- endif -%})
+{%- for mod,parameter in server.get('module', {}).iteritems() %}
+module(load="{{ mod }}"{%- for name,value in parameter.iteritems() %} {{name}}="{{value}}"{%- endfor -%})
 {%- endfor %}
+
 
 ##### Template Descriptions #####
 {%- for name,template in server.get('template', {}).iteritems() %}
