Setting more values to optional
I may not wish to specify these values. For example, you cannot reproduce the default configuration file that ships from the CentOS 7 Distro.

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -26,18 +26,25 @@ $SystemLogRateLimitInterval {{ global.system_log_rate_limit_interval }}
 {% if global.system_log_rateLimit_burst is defined -%}
 $SystemLogRateLimitBurst {{ global.system_log_rateLimit_burst }}
 {% endif -%}
+{% if global.perm_dir is defined -%}
 $DirCreateMode {{ global.perm_dir }}
+{% endif -%}
+{% if global.run_user is defined -%}
 $PrivDropToUser {{ global.run_user }}
+{% endif -%}
+{% if global.run_group is defined -%}
 $PrivDropToGroup {{ global.run_group }}
+{% endif -%}
+
 $WorkDirectory {{ global.spool_dir }}
 
 {% if global.format is defined -%}
+{% if global.format.template is defined -%}
 $Template {{ global.format.name }}, "{{ global.format.template }}"
-$ActionFileDefaultTemplate {{ global.format.name }}
-{% else -%}
-$template RSYSLOG_TraditionalFileFormat
-$ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 {% endif -%}
+$ActionFileDefaultTemplate {{ global.format.name }}
+{% endif -%}
+
 
 {# Additional configurations should be included after defining the global format otherwise they won't benefit from it #}
 $IncludeConfig {{ global.rsyslog_d }}/*.conf
