Support log-based metrics as rates or counters
Change-Id: Icf86c8b2803ee3f96c5d2e2a63efb185b1f6d5cd

--- a/rsyslog/meta/heka.yml
+++ b/rsyslog/meta/heka.yml
@@ -1,4 +1,5 @@
 {%- from "rsyslog/map.jinja" import global with context %}
+{%- from "heka/map.jinja" import log_collector with context %}
 log_collector:
   decoder:
     syslog:
@@ -45,6 +46,7 @@ log_collector:
       config:
         hostname: '{{ grains.host }}'
         grace_interval: 30
+        emit_rates: {{ log_collector.emit_rates|default(True)|lower }}
 metric_collector:
   trigger:
     failed_logins_warning:
