Update run_tests.sh to the latest revision
Closes-Bug: PROD-12754

Change-Id: If36160514bb2191b8f42ea7939173b6c40fb8b4f

--- a/metadata.yml
+++ b/metadata.yml
@@ -1,3 +1,6 @@
 name: "rsyslog"
 version: "0.2"
-source: "https://github.com/tcpcloud/salt-formula-rsyslog"
+source: "https://github.com/salt-formulas/salt-formula-rsyslog"
+dependencies:
+- name: heka
+  source: https://github.com/salt-formulas/salt-formula-heka
