--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,6 +14,10 @@ provisioner:
   formula: rsyslog
   grains:
     noservices: True
+  dependencies:
+    - name: heka
+      repo: git
+      source: https://github.com/salt-formulas/salt-formula-heka
   state_top:
     base:
       "*":
