Rename Prometheus alerts for consistency
Change-Id: I326fc02e4316d79dccd058205a278ac0d98be3ae

--- a/rsyslog/meta/prometheus.yml
+++ b/rsyslog/meta/prometheus.yml
@@ -4,7 +4,7 @@
 {%- raw %}
 server:
   alert:
-    FailedLoginsTooHigh:
+    SshFailedLoginsTooHigh:
 {%- endraw %}
       {%- set threshold = monitoring.failed_auths_per_sec|float %}
       if: >-
