--- a/.travis.yml
+++ b/.travis.yml
@@ -17,16 +17,17 @@ install:
   - bundle install
 
 env:
-    - PLATFORM=trevorj/salty-whales:trusty
-    - PLATFORM=trevorj/salty-whales:xenial
-
+  - PLATFORM=trevorj/salty-whales:trusty SUITE=client_single
+  - PLATFORM=trevorj/salty-whales:xenial SUITE=client_single
+  - PLATFORM=trevorj/salty-whales:trusty SUITE=server_single
+  - PLATFORM=trevorj/salty-whales:xenial SUITE=server_single
 
 before_script:
   - set -o pipefail
   - make test | tail
 
 script:
-  - test ! -e .kitchen.yml || bundle exec kitchen test -t tests/integration
+  - KITCHEN_LOCAL_YAML=.kitchen.travis.yml bundle exec kitchen test -t tests/integration
 
 notifications:
   webhooks:
