Add alert for out of memory errors
Change-Id: Id0440ccc3c3c167c870fccec3b2f36cdddf5904c
Depends-On: I3bf4e4e25e2a4aa84f12454fc3f5456e6bafc9a6

--- a/rsyslog/meta/prometheus.yml
+++ b/rsyslog/meta/prometheus.yml
@@ -16,4 +16,15 @@ server:
       annotations:
         summary: 'Too many failed SSH logins'
         description: 'The rate of failed logins is too high on node {{ $labels.host }} (current value={{ $value }}, threshold={%- endraw %}{{ threshold }}).'
+    OutOfMemoryTooHigh:
+      {%- set threshold = monitoring.out_of_memory_errors_per_sec|float %}
+      if: >-
+        rate(out_of_memory_total[5m]) > {{ threshold }}
+{%- raw %}
+      labels:
+        severity: warning
+        service: system
+      annotations:
+        summary: 'Too many out-of-memory errors'
+        description: 'The rate of out-of-memory errors is too high on node {{ $labels.host }} (current value={{ $value }}, threshold={%- endraw %}{{ threshold }}).'
 {%- endif %}
