Add support for RainerScript style module configuration

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -3,6 +3,18 @@
 {% for modname in global.modules -%}
 $ModLoad {{ modname }}
 {% endfor -%}
+
+{%- if global.rainerscript is defined %}
+  {%- for module_name, config_opts in global.rainerscript.iteritems() %}
+
+module(load"{{ module_name }}"
+    {%- for option, setting in config_opts.iteritems() %}
+    {{ option }}="{{ setting }}"
+    {%- endfor %}
+    )
+  {%- endfor %}
+{%- endif %}
+
 {% if global.preserve_fqdn == true -%}
 $PreserveFQDN on
 {% else -%}
