--- a/.travis.yml
+++ b/.travis.yml
@@ -17,17 +17,18 @@ install:
   - bundle install
 
 env:
-  - PLATFORM=trevorj/salty-whales:trusty SUITE=client_single
-  - PLATFORM=trevorj/salty-whales:xenial SUITE=client_single
-  - PLATFORM=trevorj/salty-whales:trusty SUITE=server_single
-  - PLATFORM=trevorj/salty-whales:xenial SUITE=server_single
+  - PLATFORM=trevorj/salty-whales:trusty SUITE=client-single
+  - PLATFORM=trevorj/salty-whales:xenial SUITE=client-single
+  - PLATFORM=trevorj/salty-whales:trusty SUITE=server-single
+  - PLATFORM=trevorj/salty-whales:xenial SUITE=server-single
 
 before_script:
   - set -o pipefail
   - make test | tail
 
 script:
-  - KITCHEN_LOCAL_YAML=.kitchen.travis.yml bundle exec kitchen test -t tests/integration
+  - test ! -e .kitchen.yml || bundle exec kitchen converge ${SUITE} || true
+  - test ! -e .kitchen.yml || bundle exec kitchen verify ${SUITE} -t tests/integration
 
 notifications:
   webhooks:
