Remove salt-master, reclass from pkg dependencis
Change-Id: Ie2e81889969703cea8bf894619cd52a16e6ee65c

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,6 @@ Vcs-Git: https://github.com/tcpcloud/salt-formula-rsyslog.git
 
 Package: salt-formula-rsyslog
 Architecture: all
-Depends: ${misc:Depends}, salt-master, reclass
+Depends: ${misc:Depends}
 Description: rsyslog salt formula
  Install and configure rsyslog system.
