add support of RainerScript
  - module
  - ruleset
  - template
  - input

add remote output before $IncludeConfig

Change-Id: I43685133025ccb5afa73e7532b99b34316cdd184

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -39,6 +39,38 @@ $template RSYSLOG_TraditionalFileFormat
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 {% endif -%}
 
+{% if global.rainerscript is defined -%}
+
+{%- set rainerscript = global.get('rainerscript', {}) -%}
+
+{%- for mod,parameter in rainerscript.get('module', {}).iteritems() %}
+module(load="{{ mod }}"{%- for name,value in parameter.iteritems() %} {{name}}="{{value}}"{%- endfor -%})
+{%- endfor %}
+
+{%- for name,template in rainerscript.get('template', {}).iteritems() %}
+template(name="{{ name }}" {%- for name,value in template.parameter.iteritems() %} {{name}}="{{value}}"{%- endfor -%})
+{%- if template.description is defined -%}{ {{ template.description }} } {%- endif -%}
+{%- endfor %}
+
+{%- for name,ruleset in rainerscript.get('ruleset', {}).iteritems() %}
+ruleset(name="{{ name }}"){
+{{ ruleset.description }}
+}
+{%- endfor %}
+
+{%- for type,input in rainerscript.get('input', {}).iteritems() %}
+{%- for name,parameter in input.iteritems() %}
+input(type="{{ type }}"{%- for name,value in parameter.iteritems() %} {{name}}="{{value}}"{%- endfor -%})
+{%- endfor %}
+{%- endfor %}
+{% endif -%}
+
+{% if global.output.remote is defined %}
+{% for name,config in global.output.remote.iteritems() if config.get('enabled', False) -%}
+{{ config['filter'] }}      {{ config['action'] }}
+{% endfor -%}
+{% endif -%}
+
 {# Additional configurations should be included after defining the global format otherwise they won't benefit from it #}
 $IncludeConfig {{ global.rsyslog_d }}/*.conf
 
@@ -84,12 +116,6 @@ $Umask {{ config['umask'] }}
 
 {% if global.output.console is defined %}
 {% for name,config in global.output.console.iteritems() if config.get('enabled', False) -%}
-{{ config['filter'] }}      {{ config['action'] }}
-{% endfor -%}
-{% endif -%}
-
-{% if global.output.remote is defined %}
-{% for name,config in global.output.remote.iteritems() if config.get('enabled', False) -%}
 {{ config['filter'] }}      {{ config['action'] }}
 {% endfor -%}
 {% endif -%}
