Use new image for kitchen tests
Change-Id: Id9951f4e937dacf0647afd27929e63b45313bc27

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,12 @@ install:
   - bundle install
 
 env:
-  - PLATFORM=trevorj/salty-whales:trusty SUITE=client-single
-  - PLATFORM=trevorj/salty-whales:xenial SUITE=client-single
-  - PLATFORM=trevorj/salty-whales:trusty SUITE=server-single
-  - PLATFORM=trevorj/salty-whales:xenial SUITE=server-single
+  - PLATFORM=epcim/salt-formulas:saltstack-ubuntu-xenial-salt-2016.3 SUITE=client-single
+  - PLATFORM=epcim/salt-formulas:saltstack-ubuntu-xenial-salt-2016.3 SUITE=server-single
+  - PLATFORM=epcim/salt-formulas:saltstack-ubuntu-xenial-salt-2017.7 SUITE=client-single
+  - PLATFORM=epcim/salt-formulas:saltstack-ubuntu-xenial-salt-2017.7 SUITE=server-single
+  # - PLATFORM=epcim/salt-formulas:saltstack-ubuntu-bionic-salt-2017.7 SUITE=client-single
+  # - PLATFORM=epcim/salt-formulas:saltstack-ubuntu-bionic-salt-2017.7 SUITE=server-single
 
 before_script:
   - set -o pipefail
