Added parameter owner to user as required by last salt version. Prevent warnings like: [WARNING ] Use of argument owner found, 'owner' is invalid, please use 'user'

--- a/rsyslog/files/rsyslog.default.conf
+++ b/rsyslog/files/rsyslog.default.conf
@@ -96,8 +96,8 @@ $Template {{ name|replace('/', '_') }}, "{{ config.template }}"
 
 {%- macro rsyslog_output_file(files) -%}
 {%- for name, config in files.items() %}
-{% if config.owner is defined -%}
-$FileOwner {{ config['owner'] }}
+{% if config.user is defined -%}
+$FileOwner {{ config['user'] }}
 {% endif -%}
 {% if config.group is defined -%}
 $FileGroup {{ config['group'] }}
